fixed alignment in 2col

--- a/night-andrea.css
+++ b/night-andrea.css
@@ -160,6 +160,7 @@
   display: inline-block;
   text-align: left;
   margin: 0 0 0 1em;
+  padding: 10px 0px 0px 0px;
 }
 .reveal ol {
   list-style-type: decimal;
